--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.0",
+    "dayjs": "^1.11.9",
+    "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-super-responsive-table": "^5.2.1",
+    "react-toastify": "^9.1.3",
+    "sass": "^1.64.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
